--- a/Pages/Nosotros.html
+++ b/Pages/Nosotros.html
@@ -50,9 +50,9 @@
         <div class="container-nosotros-flex">
           <div class="container px-0">
             <div class="row justify-content-center my-10 py-10">
-              <div class="col-lg-4 col-md-12 col-sm-12  container-nosotros">
-                <h1 class="nuestras ">LAS IDEAS SE </H1>
-                <h1 class="burgers">VUELVEN CORPÓREAS</h1>
+              <div class="col-lg-6 col-md-12 col-sm-12  container-nosotros">
+                <h1 class="nuestras ">LAS IDEAS  </H1>
+                <h1 class="burgers ">SE VUELVEN CORPÓREAS</h1>
                 <p class="texto-web  " >Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, sequi
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, sequi
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, sequi
@@ -134,7 +134,7 @@
                 <!-- FIRMA -->
                 <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                   <ul class="list-unstyled texto-web" style="text-align: center;">
-                    <a class="navbar-brand texto-web" href="#"> <h2> VANGOGH</h2></a>
+                    <a class="navbar-brand texto-web" href="/index.html"> <h2> VANGOGH</h2></a>
                     <li>14 1078 54 y 55 </li>
                     <li>La Plata, Buenos Aires, Argentina</li>
                   </ul>
