--- a/Pages/birras.html
+++ b/Pages/birras.html
@@ -176,7 +176,7 @@
               <!-- FIRMA -->
               <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
                 <ul class="list-unstyled texto-web" style="text-align: center;">
-                  <a class="navbar-brand texto-web" href="#"> <h2> VANGOGH</h2></a>
+                  <a class="navbar-brand texto-web" href="/index.html"> <h2> VANGOGH</h2></a>
                   <li>14 1078 54 y 55 </li>
                   <li>La Plata, Buenos Aires, Argentina</li>
                 </ul>
