--- a/Pages/Contacto.html
+++ b/Pages/Contacto.html
@@ -93,28 +93,27 @@
           </div>
 
           
-        <div class="row container-fluid">
+          <div class="row container-fluid mt-2 mx-0 px-0">
             <div class="container-fluid">
-                <h2 class="texto-web text-center display-7">RECIBÍ TODAS NUESTRAS PROMOS ESPECIALES</h2>
-            </div>
-            <div class="mx-auto py-1 d-flex  flex-column  flex-md-row  g-5 my-0" style="width: auto;">
-                <input type="text" class="form-control mx-2 " placeholder="Email" aria-label="Email">
-                <input type="text" class="form-control mx-2" placeholder="Whatsapp" aria-label="Whatsapp">
+              <h2 class="texto-web text-center display-7">RECIBÍ TODAS NUESTRAS PROMOS ESPECIALES</h2>
+            </div> 
+            <div class="mx-auto py-1 d-flex flex-column flex-md-row my-0" style="width: auto;">
+              <input type="text" class="form-control mx-2 mb-2 mb-md-0" placeholder="Email" aria-label="Email">
+              <input type="text" class="form-control mx-2" placeholder="Whatsapp" aria-label="Whatsapp">
             </div>
             <div class="ROW text-center py-3">
-                <button type="button " class="btn btn-outline-light btn-lg ">SUSCRIBIRSE</button>
+              <button type="button " class="btn btn-outline-light btn-lg">SUSCRIBIRSE</button>
             </div>
-        </div>
-        
+          </div>
 
 </section> 
-<div class="container.fluid mt-4">
+<div class="container.fluid mt-4 ">
 
     <footer class="text-white text-center text-lg-start bg-dark" >
-      <div class="container p-1 ">
+      <div class="container p-0 ">
         <div class="row pt-2 mt-10 ">
           <!--CONTACTOS-->
-          <div class="col-lg-4 col-md-12 mb-4 ">
+          <div class="col-lg-4 col-md-12 mb-4  ">
             <div class="mt-4 d-flex flex-row align-items-start justify-content-center sm-d-flex -flex-row align-items-start justify-content-center">
               <ul class="list-inline pt-1" >
                 <h3 class="texto-web-footer ">CONTAC</h3>
@@ -140,7 +139,7 @@
           <!-- FIRMA -->
           <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
             <ul class="list-unstyled texto-web" style="text-align: center;">
-              <a class="navbar-brand texto-web" href="#"> <h2> VANGOGH</h2></a>
+              <a class="navbar-brand texto-web" href="/index.html"> <h2> VANGOGH</h2></a>
               <li>14 1078 54 y 55 </li>
               <li>La Plata, Buenos Aires, Argentina</li>
             </ul>
