--- a/Pages/burger_bs.html
+++ b/Pages/burger_bs.html
@@ -314,7 +314,7 @@
   </div>
 
   <div class="row row-cols-1  mt-5 mb-5 text-center">
-  <h1 class=" display-1 nuestras"> NUESTROS <span class=" burgers" > SANGUCHES</span> </h1>
+  <h1 class=" display-1 nuestras"> NUESTROS <span class=" burgers" > SANGUS</span> </h1>
   </div>
 <div class=" row row-cols-1 px-4 row-cols-md-2 m-0 g-4 row-cols-xl-4 row-cols-xxl-4 row-cols-lg-4 justify-content-center">
 <div class="col"> <!-- sangu 1 -->
@@ -369,7 +369,7 @@
 </div>
 
   <div class="row row-cols-1  mt-5 mb-5 text-center">
-  <h1 class=" display-1 nuestras"> NUESTRAS <span class=" burgers" > PAPAS</span> </h1> 
+  <h1  id="nuestras-tapas" class="  display-1 nuestras"> NUESTRAS <span class=" burgers" > TAPAS</span> </h1> 
   </div>
 </div>
 <div class=" row row-cols-1 px-4 row-cols-md-2 m-0 g-4 row-cols-xl-4 row-cols-xxl-4 row-cols-lg-4 justify-content-center ">
@@ -423,8 +423,45 @@
 </div>
   </div>
 </div>
+
+<div class="col"> <!-- papas  3 -->
+  <div class="card fondo_viñedo border border border-dark ">
+    <img src="../imgs/onion.rings.jpg" class="card-img-top" alt="Papascheddar">
+    <div class="card-body">
+      <h5 class="card-title text-center texto-web">AROS DE CEBOLLA</h5>
+      <p class="card-text text-center texto-web"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+      </svg> Anillos de cebolla rebozados en cereales fritos </p>
+   
+
+  <div class="container text-center d-flex align-items-center justify-content-center pb-3">
+      <input class="form-check-input me-1 mt-4" type="checkbox" value="SUMAR AL PEDIDO" id="firstCheckbox">
+      <label class="form-check-label mt-4 texto-web" for="firstCheckbox">AGREGAR AL PEDIDO</label>
+  </div>
+</div>
+  </div>
+</div>
+<div class="col"> <!-- papas  4 -->
+  <div class="card fondo_girasoles border border border-dark ">
+    <img src="../imgs/Nuggets-pollo.jpg" class="card-img-top" alt="Papascheddar">
+    <div class="card-body">
+      <h5 class="card-title text-center texto-web">NUGGETS DE POLLO</h5>
+      <p class="card-text text-center texto-web"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+        <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
+      </svg>Piezas de pollo rebozadas fritas </p>
+   
+
+  <div class="container text-center d-flex align-items-center justify-content-center pb-3">
+      <input class="form-check-input me-1 mt-4" type="checkbox" value="SUMAR AL PEDIDO" id="firstCheckbox">
+      <label class="form-check-label mt-4 texto-web" for="firstCheckbox">AGREGAR AL PEDIDO</label>
+  </div>
+</div>
+  </div>
 </div>
 </div>
+</div>
+
+
 
 
 <div class="container.fluid mt-4">
@@ -459,7 +496,7 @@
         <!-- FIRMA -->
         <div class="col-lg-4 col-md-6 mb-4 mb-md-0">
           <ul class="list-unstyled texto-web" style="text-align: center;">
-            <a class="navbar-brand texto-web" href="#"> <h2> VANGOGH</h2></a>
+            <a class="navbar-brand texto-web" href="/index.html"> <h2> VANGOGH</h2></a>
             <li>14 1078 54 y 55 </li>
             <li>La Plata, Buenos Aires, Argentina</li>
           </ul>
